[package]
name = "JungleSpeed"
version = "0.1.0"
authors = ["Taknok <pg.developper.fr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
tokio = { version = "0.2", features = ["macros"] }
redis = "0.17"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.9.0-rc.1"
